[package]
name = "rgh"
version = "0.2.1"
authors = ["k-nasa <htilcs1115@gmail.com>"]
repository = "https://github.com/k-nasa/rgh"
keywords = ["cli", "rgh", "github"]
categories = ["command-line-utilities"]
description = "Creates GitHub release and upload asset files"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["unstable"] }
clap = "2.33.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
surf = "1.0.3"
indicatif = "0.14.0"
